📦️ dockerfile and docker compose set up. openapi json and yaml added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,21 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - .env
+    # ports:
+    #   - "127.0.0.1:5432:5432"   # uncomment if django app is running locally
+
+  web:
+    restart: always
+    build:
+      context: ./friendship
+      dockerfile: Dockerfile
+    container_name: web
+    depends_on:
+      - db
+    env_file:
+      - .env
     ports:
-      - "127.0.0.1:5432:5432"   # delete later pls
+      - "127.0.0.1:8000:8000"
 
   adminer:
     image: adminer
