--- a/friendship/requirements.txt
+++ b/friendship/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+coverage==7.2.5
 Django==4.2.1
 django-environ==0.10.0
 django-ninja==0.21.0
@@ -16,6 +17,7 @@ pydantic==1.10.7
 pyflakes==3.0.1
 PyJWT==2.6.0
 pytest==7.3.1
+pytest-cov==4.0.0
 pytest-django==4.5.2
 python-dateutil==2.8.2
 six==1.16.0
